@@ -1,0 +1,9 @@
+Title: Fixed possible g_host_attribute related AttributeError exception
+Level: 1
+Component: wato
+Compatible: compat
+Version: 1.4.0i4
+Date: 1482501180
+Class: fix
+
+
